# CoPylotInstructions

./: .gitignore  README.md  build_pylot.py  pyproject.toml  settings.json  universal.md
base/: py_core.md
libs/: numpy.md  pygame.md
src/copylot/: build_pylot.py
src/mods/: flask.md  pandas.md
src/uni/: py_core.md  universal.md
