[build-system]
requires = ["poetry-core>=2.1.2"]
build-backend = "poetry.core.masonry.api"

[project]
name = "copylot"
version = "0.1.0"
description = "Customizable generator for GitHub Copilot instruction files"
authors = [
    {name = "RPINerd"},
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "questionary>=2.1.0",
]

[project.scripts]
copylot = "copylot.build_pylot:main"
